@startuml
skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
hide circle

abstract class Command {
CommandResult execute()
}
abstract class ViewCommand
class ViewConsultationsCommand
class ViewPastConsultationsCommand
class ViewUpcomingConsultationsCommand
interface Model

Command <|-- ViewCommand

ViewCommand <|-- ViewConsultationsCommand
ViewCommand <|-- ViewPastConsultationsCommand
ViewCommand <|-- ViewUpcomingConsultationsCommand

ViewConsultationsCommand ..> Model
ViewPastConsultationsCommand ..> Model
ViewUpcomingConsultationsCommand ..> Model

@enduml
